# triton-client

./: .gitmodules  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: publish.yml
examples/: macro_usage.rs  python_usage_example.py
examples/tritonclient/: __init__.py  __init__.pyi
examples/tritonclient/grpc/: __init__.py  client.py  types.py
examples/tritonclient/utils/: __init__.py  __init__.pyi  dtype.py  shared_memory.py  shared_memory.pyi
py_vec_types/: Cargo.toml
py_vec_types/src/: lib.rs
src/: client.rs  error.rs  grpc.health.v1.rs  inference.rs  lib.rs  py_impl.rs  py_types.rs  utils.rs
tools/: gen_stubs.py  pyproject.toml
triton-client-macros/: Cargo.toml
triton-client-macros/src/: lib.rs
triton_client/: __init__.pyi  triton_client.pyi
tritonclient/: README.md
tritonclient/grpc/: __init__.pyi
