[package]
name = "triton_client"
version = "0.2.0"
authors = [
    "soloist-v <mr.sololife@gmail.com>",
]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/octoml/triton-client"
description = "A client for interfacing with NVIDIA Triton inference server."
keywords = ["inference", "nvidia", "triton"]
readme = "README.md"

[features]
default = []

[dependencies]
log = { version = "0.4.28", features = ["release_max_level_info"] }
flexi_logger = "0.31.2"
prost = { version = "0.14" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic = { version = "0.14", features = ["tls-aws-lc"] }
tonic-prost = { version = "0.14" }
thiserror = "2"
anyhow = "1"
http = { version = "1", default-features = false }
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = { version = "0.26" }
serde_json = "1"
prost-types = "0.14"
triton-client-macros = {path = "triton-client-macros"}

[build-dependencies]
walkdir = "2"
anyhow = "1.0"
protoc-prebuilt = "0.3.0"
tonic-prost-build = "0.14"
protoc-fetcher = "0.1.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
