[package]
name = "triton-client"
version = "0.1.0"
authors = [
    "soloist-v <mr.sololife@gmail.com>",
]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/soloist-v/triton-client"
description = "A client for interfacing with NVIDIA Triton inference server."
keywords = ["inference", "nvidia", "triton"]
readme = "README.md"

[lib]
name = "triton_client"
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
log = { version = "0.4.28", features = ["release_max_level_info"] }
flexi_logger = "0.31.2"
prost = { version = "0.14" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic = { version = "0.14", features = ["tls-aws-lc"] }
tonic-prost = { version = "0.14" }
thiserror = "2"
anyhow = "1"
http = { version = "1", default-features = false }
pyo3 = { version = "0.27", features = ["extension-module", "multiple-pymethods"] }
numpy = { version = "0.27" }
serde_json = { version = "1" }
py_vec_types = { path = "py_vec_types" }
triton-client-macros = { path = "triton-client-macros" }

[build-dependencies]
walkdir = "2"
anyhow = "1.0"
protoc-prebuilt = "0.3.0"
tonic-prost-build = "0.14"
protoc-fetcher = "0.1.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
